collabmail-pro/backend/spring-boot/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-backend-service
spec:
  selector:
    app: spring-boot-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
